# ontap

./: .ansible-lint  .azure-pipelines.yml  .gitignore  README.md  galaxy.yml  noxfile.py  pyproject.toml
plugins/args/: hello_world.json
plugins/modules/: hello_world.py
roles/aggregate/: README.md
roles/aggregate/defaults/: main.yml
roles/aggregate/handlers/: main.yml
roles/aggregate/tasks/: get_best_aggregate.yml  get_best_aggregate_loop.yml
roles/aggregate/tests/: test.yml
roles/aggregate/vars/: main.yml
roles/igroup/: README.md
roles/igroup/defaults/: main.yml
roles/igroup/handlers/: main.yml
roles/igroup/tasks/: initiator.yml  main.yml
roles/igroup/tests/: test.yml
roles/igroup/vars/: main.yml
roles/lun/: README.md
roles/lun/defaults/: main.yml
roles/lun/handlers/: main.yml
roles/lun/tasks/: main.yml  map.yml
roles/lun/tests/: test.yml
roles/lun/vars/: main.yml
roles/qtree/: README.md
roles/qtree/defaults/: main.yml
roles/qtree/handlers/: main.yml
roles/qtree/tasks/: main.yml
roles/qtree/tests/: test.yml
roles/qtree/vars/: main.yml
roles/rest/: README.md
roles/rest/defaults/: main.yml
roles/rest/handlers/: main.yml
roles/rest/tasks/: cli.yml  info.yml  main.yml
roles/rest/tests/: test.yml
roles/rest/vars/: main.yml
roles/snapmirror/: README.md
roles/snapmirror/defaults/: main.yml
roles/snapmirror/handlers/: main.yml
roles/snapmirror/tasks/: main.yml
roles/snapmirror/tests/: test.yml
roles/volume/: README.md
tests/: config.yml
tests/unit/: requirements.txt
tests/utils/: run_module.sh
(+11 files in other folders)
